--- a/assets/css/hw04.css
+++ b/assets/css/hw04.css
@@ -1,11 +1,11 @@
-* {
+* {#faedcd
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
 body{
-    background-color: #faedcd;
+    background-color: ;
 }
 
 .navbar {
