--- a/assets/css/hw01.css
+++ b/assets/css/hw01.css
@@ -1,11 +1,14 @@
-* {
-    margin: 0;
-    padding: 0;
+body,*{
+    margin:0;
+    padding:0;
+
     box-sizing: border-box;
 }
 
 body{
-    background-color: #faedcd;
+    background-color: #e5b993;
+    overflow-x:hidden;
+    max-width:100vw;
 }
 
 
@@ -28,7 +31,8 @@ body{
 
 .meun ul li {
     display: inline-block;
-    margin-right: 20px;
+    margin-right: 25px;
+    padding: 15px;
 }
 
 a {
@@ -227,11 +231,13 @@ p {
 }
 
 .footer-col2 {
-    width: 15%;
+    width: 10%;
+
 }
 
 .footer-col2 img {
     width: 70%;
+    border-radius: 22px;
 }
 
 .container1 {
@@ -247,6 +253,7 @@ p {
 .ig {
     width: 100px;
     height: 100px;
+    border-radius: 22px;
 }
 
 .row {
