--- a/assets/css/member.css
+++ b/assets/css/member.css
@@ -41,7 +41,7 @@
     width: 25%;
     color: #8f8e8d;
     word-wrap: break-word;
-    background-color: ##faedcd;
+    background-color: #faedcd;
 }
 
 .info_content {
