--- a/assets/css/car.css
+++ b/assets/css/car.css
@@ -66,7 +66,6 @@ p {
 .item_header div {
     width: 200px;
     color: #333;
-    line-height: 30px;
 }
 
 .item_header .item_detail {
@@ -90,6 +89,7 @@ p {
 .item_detail .name {
     margin-left: 100px;
     margin-top: 20px;
+    font-size: 15px;
 }
 
 .count input {
