--- a/assets/css/history.css
+++ b/assets/css/history.css
@@ -47,6 +47,12 @@ table {
     border-collapse: collapse;
 }
 
+.cart-page {
+    margin: 80px;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
 .cart-info {
     display: flex;
     flex-wrap: wrap;
