--- a/assets/css/hw01.css
+++ b/assets/css/hw01.css
@@ -69,52 +69,15 @@ p {
     text-decoration: none;
 }
 
-.navigationbar a:hover {
-    background-color: red;
-    color: black;
-}
-
 .dropdown {
     float: left;
     overflow: hidden;
 }
 
-.dropdown .dropbtn {
-    font-size: 16px;
-    border: none;
-    outline: none;
+.dropdown p{
     color: white;
-    padding: 14px 16px;
-    font-family: inherit;
-    background-color: #333;
-    margin: 0;
 }
 
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: center;
-}
-
-.dropdown-content a:hover {
-    background-color: #ddd;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
 .list{
     width: 80%;
     background-color: #faedcd;
