--- a/assets/css/team.css
+++ b/assets/css/team.css
@@ -9,8 +9,11 @@ body{
     overflow-x:hidden;
     max-width:150vw;
     background-color: #e5b993;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    margin: 50px;
 }
-
 .navbar {
     display: flex;
     align-items: center;
@@ -89,121 +92,111 @@ p {
     /*display: block;
     margin: auto;*/
 }
-.button{
+
+
+.container{
+    /*position: relative;*/
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+   /* border-style: solid;*/
+    
+
 }
 
-.list{
-    width: 80%;
-    /*border: solid;*/
-}
-
-.car{
-    width: 20%;
-   
-}
-
-
-h1{
-    text-align: center;
-}
-
-.title{
-    display: flex;
-}
-
-.slideshow-container {
-    width: 550px;
-    position: relative;
-    flex: 1;
-}
-
-.mySlides {
-    display: none;
-}
-
-.img01{
- width: 650px;  
- height: 650px;
- padding: 120px;
- border-radius: 25%;
- /*border: solid;*/
-}
-
-.prev, .next {
-    position: absolute;
-    top: 50%;
-    width: auto;
-    padding: 16px;
-    margin-top: -22px;
-    font-size: 20px;
-    cursor: pointer;
-    /*border: solid;*/  
-}
-
-.prev {
-    left: 0;
-}
-
-.next {
-    right: 10%;
-}
-
-.text01{
-    padding: 5% 10% 0% 0%;
-    font-size: 25px;
-    width: 40%;
-    flex: 1;
-}
-.photo{
-    width: 100%;
-    /*border-style: solid;*/
-}
-
-
-.button {
+.Selfintroduction{
     display: flex;
     justify-content: center;
-    align-content: center;
-    margin-top: 30px;
-   
 }
 
-.button1{
-    width: 50%;
+.container .box{
+    position: relative;
+    width: 300px;
+    height: 300px;
+    overflow: hidden;
+    transition: 0.5s;
 }
 
-.button2{
-    width: 50%;
+.container .box:hover{
+    transform: scale(1.25);
+    box-shadow: 0 25px 40px rgba(0,0,0,0,5);
+    z-index: 1;
+    height: 300px;
+    overflow: hidden;    
 }
 
-input {
-    border: 0;
-    background-color: #bc6c25;
-    color: #fff;
-    border-radius: 10px;
-    cursor: pointer;
+.container .box .img-box img{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
-input:hover {
-    color: #bc6c25;
-    background-color: #fff;
-    border: 2px #bc6c25 solid;
+
+.container .box .img-box{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
-.buyer{
-    margin: 2%;
-    border: solid black;
-    background-color: #f1faee;
-    border-radius: 10px;
+.container .box .img-box:before{
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to top, #222, transparent);
+    z-index: 1;
+    opacity: 0;
+    transition: 0.5s;
 }
 
-.consumer_name{
-    font-size: 25px;
+.container .box:hover .img-box:before{
+    opacity: 1;
 }
 
-.respond{
+.container .box .text-box{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    display: flex;
+    align-items: flex-end;
+    color: white;
+    z-index: 2;
+}
+
+.container .box .text-box h2{
     font-size: 20px;
+    margin-bottom: 10px;
+    transform: translateY(200px);
+    transition: 0.5s;
+}
+
+.container .box:hover .text-box h2{
+    transform: translateY(0);
+    transition-delay: 0.3s;
+}
+
+.container .box .text-box p{
+    font-size: 13px;
+    line-height: 20px;
+    transform: translateY(200px);
+    transition: 0.5s;
+    color: white;
+}
+
+.container .box:hover .text-box p{
+    transform: translate(0);
+    transition-delay: 0.3s;
 }
 
 .footer {
@@ -227,8 +220,8 @@ input:hover {
 }
 
 .footer-col2 img {
-    width: 70%;
     border-radius: 22px;
+    width: 70%;
 }
 
 .container1 {
