--- a/assets/css/hw01.css
+++ b/assets/css/hw01.css
@@ -1,11 +1,15 @@
+body,
 * {
     margin: 0;
     padding: 0;
+
     box-sizing: border-box;
 }
 
-body{
-    background-color: #faedcd;
+body {
+    background-color: #e5b993;
+    overflow-x: hidden;
+    max-width: 100vw;
 }
 
 
@@ -28,7 +32,8 @@ body{
 
 .meun ul li {
     display: inline-block;
-    margin-right: 20px;
+    margin-right: 10px;
+    padding: 15px;
 }
 
 a {
@@ -65,148 +70,230 @@ p {
     text-decoration: none;
 }
 
-.navigationbar a:hover {
-    background-color: red;
+
+
+
+.search-btn img {
+    width: 20px;
+    height: auto;
+
+}
+
+
+ul {
+    /* 取消ul預設的內縮及樣式 */
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+ul.drop-down-menu {
+
+    display: inline-block;
+    font-family: 'Noto Sans JP', sans-serif;
+    font-size: 15px;
+}
+
+
+
+ul.drop-down-menu>li:last-child {
+    border-right: none;
+}
+
+
+
+ul.drop-down-menu a {
     color: black;
+    display: flex;
+    padding: 0 30px;
+    text-decoration: none;
+    line-height: 40px;
+    border: solid;
 }
 
 .dropdown {
+    border-radius: 10px;
+    background-color: wheat;
+    margin-right: -500px;
+
+}
+
+.dropdown01 {
+    border-radius: 10px;
+    background-color: #333;
+}
+
+.dropdown01 p {
+    color: wheat;
+}
+
+ul.drop-down-menu a:hover {
+    /* 滑鼠滑入按鈕變色*/
+    border-radius: 10px;
+    background-color: #ef5c28;
+    color: #fff;
+}
+
+ul.drop-down-menu li:hover>a {
+    /* 滑鼠移入次選單上層按鈕保持變色*/
+    border-radius: 10px;
+    background-color: #ef5c28;
+    color: #fff;
+}
+
+
+
+ul.drop-down-menu ul li {
+    border-bottom: #ccc 1px solid;
+}
+
+ul.drop-down-menu ul li:last-child {
+    border-bottom: none;
+}
+
+ul.drop-down-menu ul {
+    /*隱藏次選單*/
+    left: auto;
+    right: 0;
+    opacity: 0;
+    -webkit-transition: opacity 0.3s;
+    transition: opacity 0.3s;
+}
+
+ul.drop-down-menu li:hover>ul {
+    /* 滑鼠滑入展開次選單*/
+    opacity: 1;
+    -webkit-transition: opacity 0.3s;
+    transition: opacity 0.3s;
+    left: -1px;
+    border-right: 5px;
+}
+
+
+ul.drop-down-menu ul li:hover>ul {
+    /* 第二層之後的選單展開位置*/
+    left: 90%;
+}
+
+ul.drop-down-menu .dropdown {
     float: left;
     overflow: hidden;
 }
 
-.dropdown .dropbtn {
-    font-size: 16px;
-    border: none;
-    outline: none;
+ul.drop-down-menu .dropdown p {
     color: white;
-    padding: 14px 16px;
-    font-family: inherit;
-    background-color: #333;
-    margin: 0;
+    text-align: right;
 }
 
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
+
+
+.dropdown {
+    float: right;
+    overflow: hidden;
 }
 
-.dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: center;
+.dropdown p {
+    color: white;
+    text-align: right;
 }
 
-.dropdown-content a:hover {
-    background-color: #ddd;
-}
 
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-.list{
+.list {
     width: 80%;
     background-color: #faedcd;
     /*border: solid;*/
 }
 
-.car{
+.car {
     width: 20%;
-   
+
 }
 
-.product01{
+.product01 {
     width: 100%;
     display: flex;
-    padding: 50px 0px 0px 0px;  
+    padding: 50px 0px 0px 0px;
     /*border-style: solid;*/
 }
 
-.product02{
+.product02 {
     width: 100%;
     display: flex;
-    padding: 50px 0px 0px 0px;  
+    padding: 50px 0px 0px 0px;
     /*border-style: solid;*/
 }
 
-.link01{
+.link01 {
     padding: 50px 0px 0px 8%;
     display: flex;
 }
 
-.link02{
+.link02 {
     padding: 50px 0px 0px 8%;
     display: flex;
 }
 
-.link03{
+.link03 {
     padding: 50px 0px 0px 8%;
     display: flex;
 }
 
-.link04{
+.link04 {
     padding: 50px 0px 0px 8%;
     display: flex;
 }
 
-.img01{
+.img01 {
     width: 250px;
     /*border: solid;*/
     height: 250px;
     border-radius: 15%;
 }
 
-.img02{
+.img02 {
     width: 250px;
     height: 250px;
     border-radius: 15%;
 }
 
-.img03{
+.img03 {
     width: 250px;
     height: 250px;
     border-radius: 15%;
 }
 
-.img04{
+.img04 {
     width: 250px;
     height: 250px;
     border-radius: 15%;
 }
 
-.img05{
+.img05 {
     width: 250px;
     height: 250px;
     border-radius: 15%;
 }
 
-.img06{
+.img06 {
     width: 250px;
     height: 250px;
     border-radius: 15%;
 }
 
-.img07{
+.img07 {
     width: 250px;
     height: 250px;
     border-radius: 15%;
 }
 
-.img08{
+.img08 {
     width: 250px;
     height: 250px;
     border-radius: 15%;
 }
 
 
-.list2{
+.list2 {
     background-color: black;
 }
 
@@ -227,11 +314,13 @@ p {
 }
 
 .footer-col2 {
-    width: 15%;
+    width: 10%;
+
 }
 
 .footer-col2 img {
     width: 70%;
+    border-radius: 22px;
 }
 
 .container1 {
@@ -247,6 +336,7 @@ p {
 .ig {
     width: 100px;
     height: 100px;
+    border-radius: 22px;
 }
 
 .row {
@@ -255,4 +345,3 @@ p {
     flex-wrap: wrap;
     justify-content: space-around;
 }
-
