--- a/assets/css/hw04.css
+++ b/assets/css/hw04.css
@@ -1,11 +1,14 @@
-* {#faedcd
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+   
 }
 
 body{
-    background-color: ;
+    overflow-x:hidden;
+    max-width:150vw;
+    background-color: #e5b993;
 }
 
 .navbar {
@@ -27,7 +30,8 @@ body{
 
 .meun ul li {
     display: inline-block;
-    margin-right: 20px;
+    margin-right: 25px;
+    padding: 15px;
 }
 
 a {
@@ -66,51 +70,13 @@ p {
     text-decoration: none;
 }
 
-.navigationbar a:hover {
-    background-color: red;
-    color: black;
-}
-
 .dropdown {
     float: left;
     overflow: hidden;
 }
 
-.dropdown .dropbtn {
-    font-size: 16px;
-    border: none;
-    outline: none;
+.dropdown p{
     color: white;
-    padding: 14px 16px;
-    font-family: inherit;
-    background-color: #333;
-    margin: 0;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: center;
-}
-
-.dropdown-content a:hover {
-    background-color: #ddd;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
 }
 .comment{
     outline: none;
@@ -258,11 +224,12 @@ input:hover {
 }
 
 .footer-col2 {
-    width: 15%;
+    width: 10%;
 }
 
 .footer-col2 img {
     width: 70%;
+    border-radius: 22px;
 }
 
 .container1 {
@@ -278,6 +245,7 @@ input:hover {
 .ig {
     width: 100px;
     height: 100px;
+    border-radius: 22px;
 }
 
 .row {
