--- a/assets/css/hw09.css
+++ b/assets/css/hw09.css
@@ -2,10 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+   
 }
 
 body{
-    background-color: #faedcd;
+    overflow-x:hidden;
+    max-width:150vw;
+    background-color: #e5b993;
 }
 
 .navbar {
@@ -27,7 +30,8 @@ body{
 
 .meun ul li {
     display: inline-block;
-    margin-right: 20px;
+    margin-right: 25px;
+    padding: 15px;
 }
 
 a {
@@ -48,70 +52,33 @@ p {
     justify-content: space-between;
 }
 
-.navigationbar {
-    background-color: #333;
-    overflow: hidden;
-    text-align: center;
-    justify-content: center;
-    display: flex;
-    word-spacing: 20%;
-}
 
-.navigationbar a {
-    float: left;
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-.navigationbar a:hover {
-    background-color: red;
-    color: black;
-}
-
-.dropdown {
-    float: left;
-    overflow: hidden;
-}
-
-.dropdown .dropbtn {
-    font-size: 16px;
-    border: none;
-    outline: none;
-    color: white;
-    padding: 14px 16px;
-    font-family: inherit;
-    background-color: #333;
-    margin: 0;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: center;
-}
-
-.dropdown-content a:hover {
-    background-color: #ddd;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
+    .navigationbar {
+        background-color: #333;
+        overflow: hidden;
+        text-align: center;
+        justify-content: center;
+        display: flex;
+        word-spacing: 20%;
+    }
+    
+    .navigationbar a {
+        float: left;
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+    }
+    
+    .dropdown {
+        float: left;
+        overflow: hidden;
+    }
+    
+    .dropdown p{
+        color: white;
+    }
 .comment{
     outline: none;
     background-color: white;
@@ -258,10 +225,11 @@ input:hover {
 }
 
 .footer-col2 {
-    width: 15%;
+    width: 10%;
 }
 
 .footer-col2 img {
+    border-radius: 22px;
     width: 70%;
 }
 
@@ -278,6 +246,7 @@ input:hover {
 .ig {
     width: 100px;
     height: 100px;
+    border-radius: 22px;
 }
 
 .row {
