--- a/assets/css/hw02.css
+++ b/assets/css/hw02.css
@@ -2,32 +2,35 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
 }
 
-body{
-    background-color: #faedcd;
+body {
+    overflow-x: hidden;
+    max-width: 150vw;
+    background-color: #e5b993;
 }
 
 .navbar {
     display: flex;
     align-items: center;
-
+    padding: 20px;
 }
 
 .meun {
-    display: flex;
-    margin-left: 120%;
+    flex: 1;
     text-align: right;
 }
 
 .meun ul {
-    display: flex;
+    display: inline-block;
     list-style-type: none;
 }
 
 .meun ul li {
     display: inline-block;
-    margin-right: 20px;
+    margin-right: 25px;
+    padding: 15px;
 }
 
 a {
@@ -37,6 +40,186 @@ a {
 
 p {
     color: black;
+}
+
+.container {
+    max-width: 1300px;
+    margin: auto;
+    padding-left: 35px;
+    padding-right: 35px;
+}
+
+.navigationbar {
+    background-color: #333;
+    overflow: hidden;
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    word-spacing: 20%;
+}
+
+.navigationbar a {
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+
+.search-bar {
+    background-color: #fff;
+}
+
+.search-btn img {
+    width: 20px;
+    height: auto;
+
+}
+
+
+ul {
+    /* 取消ul預設的內縮及樣式 */
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+ul.drop-down-menu {
+
+    display: inline-block;
+    font-family: 'Noto Sans JP', sans-serif;
+    font-size: 15px;
+}
+
+
+
+ul.drop-down-menu>li:last-child {
+    border-right: none;
+}
+
+
+
+ul.drop-down-menu a {
+    color: black;
+    display: block;
+    padding: 0 30px;
+    text-decoration: none;
+    line-height: 40px;
+    border: solid;
+}
+
+.dropdown {
+    border-radius: 10px;
+    background-color: wheat;
+    margin-right: -500px;
+}
+
+
+
+.dropdown01 {
+    border-radius: 10px;
+    background-color: #333;
+}
+
+.dropdown01 p {
+    color: wheat;
+}
+
+ul.drop-down-menu a:hover {
+    /* 滑鼠滑入按鈕變色*/
+    border-radius: 10px;
+    background-color: #ef5c28;
+    color: #fff;
+}
+
+ul.drop-down-menu li:hover>a {
+    /* 滑鼠移入次選單上層按鈕保持變色*/
+    border-radius: 10px;
+    background-color: #ef5c28;
+    color: #fff;
+}
+
+
+
+ul.drop-down-menu ul li {
+    border-bottom: #ccc 1px solid;
+}
+
+ul.drop-down-menu ul li:last-child {
+    border-bottom: none;
+}
+
+ul.drop-down-menu ul {
+    /*隱藏次選單*/
+    left: 99999px;
+    opacity: 0;
+    -webkit-transition: opacity 0.3s;
+    transition: opacity 0.3s;
+}
+
+ul.drop-down-menu li:hover>ul {
+    /* 滑鼠滑入展開次選單*/
+    opacity: 1;
+    -webkit-transition: opacity 0.3s;
+    transition: opacity 0.3s;
+    left: -1px;
+    border-right: 5px;
+}
+
+
+ul.drop-down-menu ul li:hover>ul {
+    /* 第二層之後的選單展開位置*/
+    left: 90%;
+}
+
+
+
+.dropdown {
+    float: left;
+    overflow: hidden;
+}
+
+.dropdown p {
+    color: white;
+}
+
+.row {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.col2 {
+    flex-basis: 50%;
+    min-width: 300px;
+}
+
+.col2 img {
+    max-width: 100%;
+    padding: 50px 0;
+}
+
+.col2 h1 {
+    font-size: 50px;
+    line-height: 60px;
+    margin: 25px 0;
+}
+
+.btn {
+    display: inline-block;
+    background-color: rgb(230, 121, 43);
+    color: #333;
+    padding: 8px 30px;
+    margin: 30px 0;
+    border-radius: 30px;
+}
+
+.btn hover {
+    background: #f9f9f9;
+    color: #f9f9f9;
 }
 
 .container {
@@ -66,84 +249,47 @@ p {
     text-decoration: none;
 }
 
-.navigationbar a:hover {
-    background-color: red;
-    color: black;
-}
-
 .dropdown {
     float: left;
     overflow: hidden;
 }
 
-.dropdown .dropbtn {
-    font-size: 16px;
-    border: none;
-    outline: none;
+.dropdown p {
     color: white;
-    padding: 14px 16px;
-    font-family: inherit;
-    background-color: #333;
-    margin: 0;
 }
 
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: center;
-}
-
-.dropdown-content a:hover {
-    background-color: #ddd;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-.comment{
+.comment {
     outline: none;
     background-color: white;
     border: 1px solid black;
     margin-top: 50px;
     font-size: 15px;
     width: 100%;
-    color: black ;
+    color: black;
     /*display: block;
     margin: auto;*/
 }
 
-.button{
+.button {
     display: flex;
 }
 
-.list{
+.list {
     width: 80%;
     /*border: solid;*/
 }
 
-.car{
+.car {
     width: 20%;
-   
+
 }
 
 
-h1{
+h1 {
     text-align: center;
 }
 
-.title{
+.title {
     display: flex;
 }
 
@@ -157,15 +303,16 @@ h1{
     display: none;
 }
 
-.img01{
- width: 650px;  
- height: 650px;
- padding: 120px;
- border-radius: 25%;
- /*border: solid;*/
+.img01 {
+    width: 650px;
+    height: 650px;
+    padding: 120px;
+    border-radius: 25%;
+    /*border: solid;*/
 }
 
-.prev, .next {
+.prev,
+.next {
     position: absolute;
     top: 50%;
     width: auto;
@@ -173,7 +320,7 @@ h1{
     margin-top: -22px;
     font-size: 20px;
     cursor: pointer;
-    /*border: solid;*/  
+    /*border: solid;*/
 }
 
 .prev {
@@ -184,13 +331,14 @@ h1{
     right: 10%;
 }
 
-.text01{
+.text01 {
     padding: 5% 10% 0% 0%;
     font-size: 25px;
     width: 40%;
     flex: 1;
 }
-.photo{
+
+.photo {
     width: 100%;
     /*border-style: solid;*/
 }
@@ -200,24 +348,25 @@ h1{
     display: flex;
     justify-content: center;
     align-content: center;
-    margin-top: 30px;
-   
+    margin-top: 50px;
+
 }
 
-.button1{
+.button1 {
     width: 50%;
 }
 
-.button2{
+.button2 {
     width: 50%;
 }
 
 input {
     border: 0;
-    background-color: #bc6c25;
-    color: #fff;
+    background-color: wheat;
+    color: black;
     border-radius: 10px;
     cursor: pointer;
+    padding-left: 10px;
 }
 
 input:hover {
@@ -226,18 +375,46 @@ input:hover {
     border: 2px #bc6c25 solid;
 }
 
-.buyer{
+.buyer {
     margin: 2%;
     border: solid black;
     background-color: #f1faee;
     border-radius: 10px;
 }
 
-.consumer_name{
+.consumer_name {
     font-size: 25px;
 }
 
-.respond{
+condetail1 {
+    background-color: white;
+    border-radius: 10px;
+    width: 1000px;
+    height: 250px;
+    margin: 20px auto;
+}
+
+.namebar {
+    position: relative;
+    margin: 20px;
+}
+
+.default {
+    width: 20px;
+}
+
+
+.star {
+    font-size: 25px;
+    color: orange;
+}
+
+.star1 {
+    position: relative;
+    left: 22px;
+}
+
+.respond {
     font-size: 20px;
 }
 
@@ -258,11 +435,12 @@ input:hover {
 }
 
 .footer-col2 {
-    width: 15%;
+    width: 10%;
 }
 
 .footer-col2 img {
     width: 70%;
+    border-radius: 22px;
 }
 
 .container1 {
@@ -278,6 +456,7 @@ input:hover {
 .ig {
     width: 100px;
     height: 100px;
+    border-radius: 22px;
 }
 
 .row {
